Update and rename Cuddles-ToS.mdx to Cuddles-Privacy-Policy.mdx

--- a/Cuddles-Privacy-Policy.mdx
+++ b/Cuddles-Privacy-Policy.mdx
@@ -1,6 +1,6 @@
 ---
-title: Cuddles Project Privacy Policy
-description: The privacy policy for the Cuddles Project Discord bots.
+Title: Cuddles Project Privacy Policy
+Description: The privacy policy for the Cuddles Project Discord bots.
 ---
 
 ## Foreword
