Update privacy policy

--- a/cozy-privacy.mdx
+++ b/cozy-privacy.mdx
@@ -14,11 +14,11 @@ Gabe_Real and the team ("I", "Me", "We", "Our", "Us") is the data controller for
 
 When you send a message in one of our servers, we record its content and location on the server, as well as the author's User ID, for a limited period of time (roughly 30 days). We use this data to moderate users who send rule-breaking messages and edit or delete them before are seen by a moderator.
 
-### User Flags
+When you send a message in a bots direct messages, the content is logged in a staff channel for moderation purposes. This data **will not be deleted unless specifically requested**.
 
-We save two flags about you:
-- Auto Publish: whether messages that you send in an Announcement channel should be automatically published to servers following that channel.
-- Sync Nicknames: whether your nickname should be synced between all Collab/Toolchain/Community guilds. Your nickname is not saved.
+### Command usage
+
+To ensure the proper functionality of the Service and to diagnose potential issues, Cozy logs interactions, commands, and other similar activities. These logs are collected exclusively for debugging purposes. These are deleted in 30 days maximum, requests can be made to delete data early if not are needed.
 
 ## Data Retention
 
