Update that shit 🔥

--- a/cozy-privacy.mdx
+++ b/cozy-privacy.mdx
@@ -12,7 +12,7 @@ Gabe_Real and the team ("I", "Me", "We", "Our", "Us") is the data controller for
 
 ### Discord Messages
 
-When you send a message in one of our servers, we record its content and location on the server, as well as the author's User ID, for a limited period of time (roughly 30 days). We use this data to moderate users who send rule-breaking messages and edit or delete them before are seen by a moderator.
+When you send a direct message to Cozy we log the content in a staff only discord channel to protect our communities and punish those who violate our or discords TOS, this channel is only kept for our leadership members. 
 
 When you send a message in a bots direct messages, the content is logged in a staff channel for moderation purposes. This data **will not be deleted unless specifically requested**.
 
