--- a/cozy-crashes-tos.mdx
+++ b/cozy-crashes-tos.mdx
@@ -44,4 +44,4 @@ This Agreement is governed by the laws of the United Kingdom. Disputes arising u
 8. Entire Agreement
 This Agreement constitutes the entire agreement between the User and the Bot Owner with respect to the Bot. No oral or written statement not contained herein shall have any legal effect.
 
--# By using the Cozy Bot, you acknowledge that you have read, understood, and agreed to these terms.
+By using the Cozy Bot, you acknowledge that you have read, understood, and agreed to these terms.
